--- a/EthereumChainConfig/EthereumChainConfig.csproj
+++ b/EthereumChainConfig/EthereumChainConfig.csproj
@@ -7,6 +7,10 @@
         <RootNamespace>NokitaKaze.EthereumChainConfig</RootNamespace>
         <Nullable>enable</Nullable>
         <PackageVersion>0.1.0</PackageVersion>
+        <Authors>NokitaKaze</Authors>
+	    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/nokitakaze/ethereum-chain-config.net</RepositoryUrl>
+        <PackageTags>ethereum</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
