--- a/EthereumChainConfig/EthereumChainConfig.csproj
+++ b/EthereumChainConfig/EthereumChainConfig.csproj
@@ -6,7 +6,7 @@
         <AssemblyName>NokitaKaze.EthereumChainConfig</AssemblyName>
         <RootNamespace>NokitaKaze.EthereumChainConfig</RootNamespace>
         <Nullable>enable</Nullable>
-        <PackageVersion>0.1.1</PackageVersion>
+        <PackageVersion>0.1.3</PackageVersion>
         <Authors>NokitaKaze</Authors>
 	    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/nokitakaze/ethereum-chain-config.net</RepositoryUrl>
@@ -18,8 +18,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="tornado-config.json">
+      <None Include="default-ethereum-config.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Pack>true</Pack>
+        <Link>default-ethereum-config.json</Link>
+        <PackageCopyToOutput>true</PackageCopyToOutput>
       </None>
     </ItemGroup>
 
